--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <button class="blue">Send Message</button>
             <button class="orange">New letter</button>
         </div>
-    </div>
+    </div> 
+<audio autoplay loop src="bgsong.mp3"></audio>
 </body>
 </html>
