--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Yokii</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
+    <link rel="shortcut icon" href="icon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="profile-card">
