--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-card">
         <figure class="profile-card__img">
-            <img src="https://cdn.discordapp.com/avatars/651107214651686929/725f9eace7bddd2fb1528e6142f30f19.webp?size=128" alt="...">
+            <img src="https://cdn.discordapp.com/attachments/1096834980774150205/1097861446496436344/static_1.png" alt="...">
         </figure>
         <div class="profile-card__desc">
             <h1>Yokii</h1>
