--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="profile-card">
         <figure class="profile-card__img">
-            <img src="/static_1.png" alt="...">
+            <img src="/logo.png" alt="...">
         </figure>
         <div class="profile-card__desc">
             <h1>Yokii</h1>
