--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yokii</title>
+    <title>Yokii 🍃</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
 </head>
@@ -14,7 +14,7 @@
             <img src="https://cdn.discordapp.com/attachments/1096834980774150205/1097861446496436344/static_1.png" alt="...">
         </figure>
         <div class="profile-card__desc">
-            <h1>Yokii 🍃</h1>
+            <h1>Yokii</h1>
             <div>Developer</div>
             <div style="display: flex;align-items:center;gap:10px;justify-content: center;">
                 <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-map-pin" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
