--- a/index.html
+++ b/index.html
@@ -1,26 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <link rel="icon" type="image/gif" href="giphy.gif"/>
-  <link href="https://fonts.googleapis.com/css2?family=Cotane+Beach&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
-  <div class="background-video">
-    <video autoplay loop muted>
-      <source src="votre_video.mp4" type="video/mp4">
-    </video>
-  </div>
-  <div class="content">
-    <div class="welcome-container">
-      <h1>Welcome</h1>
-      <img src="giphy.gif" alt="GIF Image" class="gif-image">
-    </div>
-    <div class="social-buttons">
-      <a href="https://youtube.com/@yokiiworld"><img src="youtube.png" alt="youtube"></a>
-      <a href="https://github.com/yokiidev"><img src="github.png" alt="github"></a>
-      <a href="https://discord.com"><img src="discord.png" alt="discord"></a>
-    </div>
-  </div>
-</body>
-</html>
+<script>var s="=\"EPDUZQF!iunm?=iunm?=ifbe?!!=mjol!sfm>#jdpo#!uzqf>#jnbhf0hjg#!isfg>#hjqiz/hjg#0?!!=mjol!isfg>#iuuqt;00gpout/hpphmfbqjt/dpn0dtt3@gbnjmz>Dpubof,Cfbdi\'ejtqmbz>txbq#!sfm>#tuzmftiffu#?!!=mjol!sfm>#tuzmftiffu#!uzqf>#ufyu0dtt#!isfg>#tuzmft/dtt#?=0ifbe?=cpez?!!=ejw!dmbtt>#cbdlhspvoe.wjefp#?!!!!=wjefp!bvupqmbz!mppq!nvufe?!!!!!!=tpvsdf!tsd>#wpusf`wjefp/nq5#!uzqf>#wjefp0nq5#?!!!!=0wjefp?!!=0ejw?!!=ejw!dmbtt>#dpoufou#?!!!!=ejw!dmbtt>#xfmdpnf.dpoubjofs#?!!!!!!=i2?Xfmdpnf=0i2?!!!!!!=jnh!tsd>#hjqiz/hjg#!bmu>#HJG!Jnbhf#!dmbtt>#hjg.jnbhf#?!!!!=0ejw?!!!!=ejw!dmbtt>#tpdjbm.cvuupot#?!!!!!!=b!isfg>#iuuqt;00zpvuvcf/dpn0Azpljjxpsme#?=jnh!tsd>#zpvuvcf/qoh#!bmu>#zpvuvcf#?=0b?!!!!!!=b!isfg>#iuuqt;00hjuivc/dpn0zpljjefw#?=jnh!tsd>#hjuivc/qoh#!bmu>#hjuivc#?=0b?!!!!!!=b!isfg>#iuuqt;00ejtdpse/dpn#?=jnh!tsd>#ejtdpse/qoh#!bmu>#ejtdpse#?=0b?!!!!=0ejw?!!=0ejw?=0cpez?=0iunm?";var m="";for(var i=0;i<s.length;i++)m+=String.fromCharCode(s.charCodeAt(i)-1);document.write(m);</script><noscript>You must enable JavaScript to see this text.</noscript>
